<resources>
    <string name="Management">Manage devices</string>
    <string name="PropertyList">Properties</string>
    <string name="ServiceList">Services</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="activity_about_cs_title">Customer Service</string>
    <string name="activity_about_cs_value">sw@hhcc.io</string>
    <string name="activity_about_facebook_url">https://www.facebook.com/Flower-Care-Smart-Plant-Monitor-1083596348364404/</string>
    <string name="activity_about_page_title">About us</string>
    <string name="activity_about_twitter_url">https://twitter.com/HHCCMonitor</string>
    <string name="activity_about_update_title">软件更新</string>
    <string name="activity_about_update_value_has_new">发现新版本</string>
    <string name="activity_about_update_value_latest">已经是最新版本</string>
    <string name="activity_about_weibo_title">Twitter</string>
    <string name="activity_about_weibo_value">HHCCMonitor</string>
    <string name="activity_about_weixin_title">Facebook</string>
    <string name="activity_about_weixin_value">Flower Care Smart Plant Monitor</string>
    <string name="activity_addhardware_add_plant">Add a plant</string>
    <string name="activity_addhardware_bind_fail">Device binding failed</string>
    <string name="activity_addhardware_bind_fail_country">The device is for China Mainland user only, please contact the reseller for international version</string>
    <string name="activity_addhardware_bind_success">Bind successfully</string>
    <string name="activity_addhardware_binding">Binding the device</string>
    <string name="activity_addhardware_bound_someone_else">The device has been bound by someone else</string>
    <string name="activity_addhardware_connect_fail">Connection Failed. Place the phone close to the device.</string>
    <string name="activity_addhardware_connecting">Connecting device</string>
    <string name="activity_addhardware_force_binding">Taking over device</string>
    <string name="activity_addhardware_page_title">Add Device</string>
    <string name="activity_addhardware_sn_verify_fail">Device serial number verify failed</string>
    <string name="activity_community_sign_in">签到</string>
    <string name="activity_communitynotification_clear">清除已读</string>
    <string name="activity_communitynotification_page_title">通知</string>
    <string name="activity_communitypost_content_hint">说点什么…</string>
    <string name="activity_communitypost_page_title">发帖</string>
    <string name="activity_communitypost_select_tip">请选择帖子分类</string>
    <string name="activity_cropimage_page_title">Scale and crop</string>
    <string name="activity_delete_comment_page_title">评论详情</string>
    <string name="activity_device_near_your_phone">"Scanning Please keep
your phone and device
in 10cm"</string>
    <string name="activity_editplantinfo_alias_hint">Plant nickname</string>
    <string name="activity_editplantinfo_base_info">Basic Information</string>
    <string name="activity_editplantinfo_care_index">Care Index</string>
    <string name="activity_editplantinfo_growth_time">Monitored Days</string>
    <string name="activity_editplantinfo_my">My </string>
    <string name="activity_editplantinfo_plant_info">Plant information</string>
    <string name="activity_finishaddflower_page_title">You Will Add Plant</string>
    <string name="activity_firmwareupdate_current_version">Current version</string>
    <string name="activity_firmwareupdate_page_title">Hardware update</string>
    <string name="activity_firmwareupdate_server_version">Latest version</string>
    <string name="activity_firmwareupdate_updating_tip">"Firmware updating
Do not carry out other operations or go away from the device"</string>
    <string name="activity_growthdairypost_hint_dairy">Say something about you and plants…</string>
    <string name="activity_growthdairypost_page_title">Growth Diary</string>
    <string name="activity_handaddflower_hint_search">Input the plant name and search</string>
    <string name="activity_handaddflower_page_title">Plant Database</string>
    <string name="activity_handaddflower_suggest_tip">"Did not find the plant
Please re-enter or use select plant types"</string>
    <string name="activity_handaddflower_suggest_tip_a">"Did not find the plant "</string>
    <string name="activity_handaddflower_suggest_tip_b">" in plant database
Please re-enter or select the plant types"</string>
    <string name="activity_home_ble_connecting">Connecting…</string>
    <string name="activity_home_click_retry">retry</string>
    <string name="activity_home_growth_time_a">Monitored %d day(s)</string>
    <string name="activity_home_history_data_sync">Synchronizing history data</string>
    <string name="activity_home_history_data_sync_dot">Synchronizing history data…</string>
    <string name="activity_home_history_data_sync_fail">Sync failed, click retry</string>
    <string name="activity_home_history_data_sync_finish">History data synchronization is complete</string>
    <string name="activity_home_how_to_fertilize">How to fertilize</string>
    <string name="activity_home_no_plant">Flower Care is not bound with any plant</string>
    <string name="activity_home_state_ec">Fertility</string>
    <string name="activity_home_state_light">Sunlight</string>
    <string name="activity_home_state_message_night">Night falls, take a rest, goodnight, see you tomorrow!</string>
    <string name="activity_home_state_temp">Temp</string>
    <string name="activity_home_state_water">Moisture</string>
    <string name="activity_main_tab_community">Community</string>
    <string name="activity_main_tab_device">Device</string>
    <string name="activity_main_tab_me">Me</string>
    <string name="activity_main_tab_plant">Plants</string>
    <string name="activity_main_tab_shop">Mall</string>
    <string name="activity_mycomment_page_title">我的评论</string>
    <string name="activity_mydevice_battery">Battery</string>
    <string name="activity_mydevice_battery_value">-%</string>
    <string name="activity_mydevice_find_device">Search Flower Care</string>
    <string name="activity_mydevice_firmware_update">Hardware update</string>
    <string name="activity_mydevice_page_title">My Device</string>
    <string name="activity_mydevice_remove_device">Remove Device</string>
    <string name="activity_mypost_page_title">我的帖子</string>
    <string name="activity_not_found_device">No device can be bound</string>
    <string name="activity_param_setting_ec">"Fertility
%1$dμS/cm~%2$dμS/cm"</string>
    <string name="activity_param_setting_light">"Sunlight
%1$dlux~%2$dlux"</string>
    <string name="activity_param_setting_temp">"Temp
%1$s~%2$s"</string>
    <string name="activity_param_setting_water">"Moisture
%1$d％~%2$d％"</string>
    <string name="activity_plantadvsearchchoice_page_title">@string/activity_handaddflower_page_title</string>
    <string name="activity_plantadvsearchchoice_question_apex">Take a look at what the leaf tip looks like</string>
    <string name="activity_plantadvsearchchoice_question_edge">Take a look at how the leaf margin looks like</string>
    <string name="activity_plantadvsearchchoice_question_leaf">Take a look at how the leaves are growing</string>
    <string name="activity_plantadvsearchchoice_question_shape">Take a look at what the leaf shape looks like</string>
    <string name="activity_plantadvsearchcoreresult_page_title">@string/activity_handaddflower_page_title</string>
    <string name="activity_plantadvsearchcoreresult_title_a">Following filtered %d plants meet your needs</string>
    <string name="activity_plantadvsearchcoreresult_title_other_a">Other similar %d plants might meet your needs</string>
    <string name="activity_plantbaseinfo_intro">Brief introduction</string>
    <string name="activity_switchplant_page_title">Switch plant</string>
    <string name="app_name">Flower Care</string>
    <string name="button_copy_link">复制链接</string>
    <string name="button_sina">微博</string>
    <string name="button_weixin">微信</string>
    <string name="button_weixin_circle">朋友圈</string>
    <string name="common_dash">-</string>
    <string name="daily_growth_report">Daily Report</string>
    <string name="flower_menu">Menu</string>
    <string name="flower_menu_device_setting">Hardware settings</string>
    <string name="flower_menu_no_disturbing_setting">Do-not-disturb</string>
    <string name="flower_menu_notify_record">Notification</string>
    <string name="flower_menu_params_setting">Parameter settings</string>
    <string name="flower_menu_plant_diary">Plant diary</string>
    <string name="flower_menu_plant_setting">Plant setting</string>
    <string name="fragment_usercenter_menu_about">About us</string>
    <string name="fragment_usercenter_menu_clear_cache">Clear cache</string>
    <string name="fragment_usercenter_menu_rate">Rate us</string>
    <string name="fragment_usercenter_menu_user_agreement">User Agreement</string>
    <string name="fragment_usercenter_menu_user_privacy">隐私政策</string>
    <string name="hhcc_app_name">花花草草</string>
    <string name="monthly_growth_report">Monthly Report</string>
    <string name="titlebar_text_record">Reports</string>
    <string name="week_growth_report">Weekly Report</string>
</resources>